[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/models/Bullets/Bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/Wizard Pack/Jumping_Small_Fireball_14x45.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 0, 225, 14, 45 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 14, 225, 14, 45 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 28, 225, 14, 45 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 42, 225, 14, 45 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 56, 225, 14, 45 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 84, 225, 14, 45 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 98, 225, 14, 45 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 112, 225, 14, 45 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 126, 225, 14, 45 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 70, 225, 14, 45 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 17 ) ],
"loop": true,
"name": "fire",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.73022, 6.67024 )

[node name="Bullet" type="Area2D"]
collision_layer = 4
collision_mask = 61
script = ExtResource( 1 )
speed = 750

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -23.44, 0 )
rotation = 1.5708
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 11 )
animation = "fire"
frame = 5
playing = true

[node name="LifeTime" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
